// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FinderList should match snapshot 1`] = `
<div class="list">
  <div role="button" draggable="false" class="item" tabindex="0">
    <!---->
    <!---->
    <div item="[object Object]" class="inner-item">Test 11</div>
    <div class="arrow"></div>
  </div>
  <div role="button" draggable="false" class="item" tabindex="-1">
    <!---->
    <!---->
    <div item="[object Object]" class="inner-item">Test 12</div>
    <!---->
  </div>
</div>
`;

exports[`FinderList should match snapshot if \`dragEnabled\` is true 1`] = `
<div class="list">
  <div class="drop-zone"></div>
  <div role="button" draggable="true" class="item draggable" tabindex="0">
    <!---->
    <!---->
    <div item="[object Object]" class="inner-item">Test 11</div>
    <div class="arrow"></div>
  </div>
  <div class="drop-zone"></div>
  <div role="button" draggable="true" class="item draggable" tabindex="-1">
    <!---->
    <!---->
    <div item="[object Object]" class="inner-item">Test 12</div>
    <!---->
  </div>
  <div class="drop-zone last"></div>
</div>
`;

exports[`FinderList should match snapshot if \`selectable\` is true 1`] = `
<div class="list">
  <div role="button" draggable="false" class="item" tabindex="0">
    <!----> <input type="checkbox" aria-label="Test 11">
    <div item="[object Object]" class="inner-item">Test 11</div>
    <div class="arrow"></div>
  </div>
  <div role="button" draggable="false" class="item" tabindex="-1">
    <!----> <input type="checkbox" aria-label="Test 12">
    <div item="[object Object]" class="inner-item">Test 12</div>
    <!---->
  </div>
</div>
`;

exports[`FinderList should match snapshot if no item 1`] = `<div class="list"></div>`;
